--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=webtech-project
+//spring.application.name=webtech-project
+
+spring.datasource.url: ${DB_URL}
+spring.datasource.username: ${DB_USERNAME}
+spring.datasource.password: ${DB_PASSWORD}
+spring.datasource.driverClassName= org.postgresql.Driver
+
+spring.jpa.properties.hibernate.jdbc.time_zone: UTC
+spring.jpa.properties.hibernate.show-sql: false
+spring.jpa.properties.hibernate.database-platform: org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.hibernate.ddl-auto: update
+spring.jpa.generate-ddl=true
+
+spring.sql.init.platform: postgres
+spring.sql.init.mode: always
